Fixed z-index issue with zoomed-in menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -948,7 +948,7 @@ header i:hover {
     position: absolute;
     top: 0;
     width: 100vw;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .food-menu-zoom-in:hover {
